--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -78,4 +78,4 @@ footer
         background-color: hsla(0, 0%, 0%, 0.2)
         color: $textNormal
         margin-bottom: 0
-        padding: 1rem, 0, 1rem, 0
+        padding: 1rem, 0,
