--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -31,8 +31,8 @@ body
     background: linear-gradient(to right, hsla(235.26, 25%, 5%, 1), hsla(235.26, 25%, 5%, 0.5)), url('../img/fiber.jpg')
     background-repeat: no-repeat
     animation-name: move
-    animation-duration: 120s
-    animation-iteration-count: infinite
+    animation-duration: 10s
+    animation-iteration-count: ease-in-out
     animation-timing-function: linear
 
     main
@@ -120,5 +120,7 @@ footer
 @keyframes move
     0%
         background-position: top
-    100%
+    50%
         background-position: bottom
+    100%
+        background-position: top
