fix bg animation for real

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -31,9 +31,9 @@ body
     background: linear-gradient(to right, hsla(235.26, 25%, 5%, 1), hsla(235.26, 25%, 5%, 0.5)), url('../img/fiber.jpg')
     background-repeat: no-repeat
     animation-name: move
-    animation-duration: 10s
-    animation-iteration-count: ease-in-out
-    animation-timing-function: linear
+    animation-duration: 120s
+    animation-iteration-count: infinite
+    animation-timing-function: ease-in-out
 
     main
         padding: 3rem
