change text content

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -88,6 +88,11 @@ body
                 &:hover
                     background-color: $primary
 
+        .note
+            font-style: italic
+            color: $textNormal
+            transparent
+
 footer
     position: absolute
     bottom: 0
